src/objects/crms11__FlexPricer_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>FlexPricer App Settings</description>
    <fields>
        <fullName>crms11__Apply_Volume_Discount_To_Derived_Units__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applies volume discount to derived units based on the Quantity Rate multipliers.</description>
        <inlineHelpText>Applies volume discount to derived units based on the Quantity Rate multipliers.</inlineHelpText>
        <label>Apply Volume Discount To Derived Units</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Default_Quantity_Rate__c</fullName>
        <description>Default Quantity Rate record which will be used when product is added to opportunity but does not have quantity rate added. If product has a default quantity rate it will override this value.</description>
        <inlineHelpText>Default Quantity Rate.</inlineHelpText>
        <label>Default Quantity Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Disable_Cloning_Product_Related_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Cloning Product Related List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Disable_Contribution_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Contribution Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Disable_Quote_Sync_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Quote Sync Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Disable_Volume_Discount_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is set to true validation triggers to check for duplicate volume discount records are disabled.</description>
        <inlineHelpText>Is set to true validation triggers to check for duplicate volume discount records are disabled.</inlineHelpText>
        <label>Disable Volume Discount Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>crms11__Generate_quote_page_name__c</fullName>
        <description>The page to be used to render as PDF in order to generate quote.</description>
        <inlineHelpText>The page to be used to render as PDF in order to generate quote.</inlineHelpText>
        <label>Quote Template URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Manager_Discount_Product__c</fullName>
        <label>Manager Discount Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Maximum_Rapid_Quantity_Options__c</fullName>
        <label>Maximum Rapid Quantity Options</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__User_Discount_Product__c</fullName>
        <label>User Discount Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>FlexPricer Settings</label>
</CustomObject>